[package]
name = "warp-ws-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
futures-util = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
warp = "0.3.6"
